# LLM_ChatBot

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
src/cib_chatbot_serverside/: __init__.py  main.py  prompt_config.json
src/cib_chatbot_serverside/api/: __init__.py  models.py  routes.py
src/cib_chatbot_serverside/config/: __init__.py  prompts.py  settings.py
src/cib_chatbot_serverside/db/: __init__.py  connection.py  operations.py
src/cib_chatbot_serverside/scripts/: sync_documents.py
src/cib_chatbot_serverside/services/: __init__.py  llm_service.py  rag_service.py
src/cib_chatbot_serverside/utils/: __init__.py  logging.py
tests/: test_rag_service.py
